# authz-contract

./: .gitignore  Cargo.toml  README.md  build.sh  deploy-local.sh  execute-local.sh  instantiate-local.sh  optimized-build.sh  setup-authz-localnet.sh  setup-authz.sh
artifacts/: checksums.txt  checksums_intermediate.txt
src/: contract.rs  error.rs  msg.rs  state.rs
src/protos/: CosmosDistributionV1beta1MsgWithdrawDelegatorReward.rs  README.md
