[package]
name = "authz-demo"
version = "0.2.0"
authors = ["Carlton Hanna"]
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
protobuf = "3"
cosmwasm-std = { version = "1.1.3", features = ["stargate"] }
cosmwasm-storage = "1.1.3"
cw-storage-plus = "0.15.1"
cw-utils = "0.15.1"
cw2 = "0.15.1"
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
provenance-sdk-proto = "0.1.1"
cosmos-sdk-proto = { version = "0.16", default-features = false }
prost = "0.9.0"
# TODO: this can be updated
thiserror = { version = "1.0.31" }

[dev-dependencies]
cosmwasm-schema = "1.1.3"
cw-multi-test = "0.15.1"

#[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"

[profile.release]
opt-level = 3
#opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
